Remove stale debug code. Add a TODO.

--- a/console.html
+++ b/console.html
@@ -5,6 +5,7 @@
     <title>Console</title>
     <style>
       * { font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+      .com-google-flow-Console { height: 100% !important; }
     </style>
  </head>
  <body>
