Increase width of Console to 99%.

--- a/console.html
+++ b/console.html
@@ -5,7 +5,7 @@
     <title>Console</title>
     <style>
       * { font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif; }
-      .com-google-flow-Console { height: 100% !important; max-height: 10000px !important; }
+      .com-google-flow-Console { width: 99% !important; height: 100% !important; max-height: 10000px !important; }
     </style>
  </head>
  <body>
