Console moved to foam3/nanos/console.

--- a/console.html
+++ b/console.html
@@ -1,11 +1,10 @@
 <html>
  <head>
-    <!-- Use absolute paths so I can also make this the default welcomeFile and load it from /. -->
     <script language="javascript" src="foam3/src/foam.js" project="/pom"></script>
     <title>Console</title>
     <style>
       * { font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif; }
-      .com-google-flow-Console { width: 99% !important; height: 100% !important; max-height: 10000px !important; }
+      .foam-nanos-console-Console { width: 99% !important; height: 100% !important; max-height: 10000px !important; }
     </style>
  </head>
  <body>
