Renamed foam.core to foam.lang. Renamed foam.nanos to foam.core. Renamed NSpec to CSpec. Renamed NanoService to COREService.

--- a/flow.html
+++ b/flow.html
@@ -7,6 +7,6 @@
     </style>
  </head>
  <body>
-  <foam id="ctrl" class="foam.nanos.zac.Client" bootservices="zacClient"></foam>
+  <foam id="ctrl" class="foam.core.zac.Client" bootservices="zacClient"></foam>
  </body>
 </html>
