--- a/console.html
+++ b/console.html
@@ -4,10 +4,10 @@
     <title>Console</title>
     <style>
       * { font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif; }
-      .foam-nanos-console-Console { width: 99% !important; height: 100% !important; max-height: 10000px !important; }
+      .foam-core-console-Console { width: 99% !important; height: 100% !important; max-height: 10000px !important; }
     </style>
  </head>
  <body>
-  <foam id="ctrl" class="foam.nanos.zac.Client" bootservices="consoleZACClient"></foam>
+  <foam id="ctrl" class="foam.core.zac.Client" bootservices="consoleZACClient"></foam>
  </body>
 </html>
